k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: contact-svc
  namespace: contact
spec:
  selector:
    app: static-application
  ports:
  - port: 80
    targetPort: 80
