k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: contact-ingress
 namespace: contact
spec:
 rules:
 - host: static.joshna.xyz
   http:
     paths:
     - path: /contact-svc.about.cluster.local
       backend:
         serviceName: contact-svc
         servicePort: 80
